fix location search and display
